force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__CartTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartTotalAmount__c</fullName>
    <description>Cart total amount to be qualified to have discount</description>
    <label>Cart Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>