force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__CouponCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CouponCode__c</fullName>
    <description>Coupon Code</description>
    <label>Coupon Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>