force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__CouponId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CouponId__c</fullName>
    <externalId>true</externalId>
    <label>Coupon Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>