force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__CouponName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CouponName__c</fullName>
    <description>Coupon Name</description>
    <label>Coupon Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>