force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CurrencyISOCode__c</fullName>
    <description>The currency for which this coupon is valid</description>
    <label>Currency ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>