force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DiscountAmount__c</fullName>
    <description>Discount amount; could be either in percentage or absolute amount</description>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>