force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enabled</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>