force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EndDate__c</fullName>
    <defaultValue>Today() + 60</defaultValue>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>