force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__MaxUse__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MaxUse__c</fullName>
    <description>Max Use</description>
    <label>Max Use</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>