force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__RuleName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; ccrz__Rule__c ,ccrz__Rule__r.ccrz__Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Name</label>
    <type>Text</type>
</CustomField>