force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__SourceSpec__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceSpec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to source spec</description>
    <label>Source Spec</label>
    <referenceTo>ccrz__E_Spec__c</referenceTo>
    <relationshipLabel>CC Coupons</relationshipLabel>
    <relationshipName>CC_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>