force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__SourceSpecMiniQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceSpecMiniQty__c</fullName>
    <label>Source Spec Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>