force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__SourceSpecValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceSpecValue__c</fullName>
    <description>Source Spec Value</description>
    <label>Source Spec Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>