force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TargetQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TargetQty__c</fullName>
    <label>Target Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>