force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TargetRelation__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TargetRelation__c</fullName>
    <description>Target relation type</description>
    <label>Target Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>SPEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>