force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TargetSpec__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TargetSpec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Spec</label>
    <referenceTo>ccrz__E_Spec__c</referenceTo>
    <relationshipLabel>CC Coupons (Target Spec)</relationshipLabel>
    <relationshipName>CC_Coupons_TargetSpec</relationshipName>
    <type>Lookup</type>
</CustomField>