force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TargetSpecQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TargetSpecQty__c</fullName>
    <label>Target Spec Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>