force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TargetSpecValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TargetSpecValue__c</fullName>
    <label>Target Spec Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>