force-app/main/default/objects/ccrz__E_Coupon__c/fields/ccrz__TotalUsed__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalUsed__c</fullName>
    <description>Total Used</description>
    <label>Total Used</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>