force-app/main/default/objects/ccrz__E_Coupon__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__CouponCode__c</columns>
    <columns>ccrz__Coupon_Notes__c</columns>
    <columns>ccrz__RuleType__c</columns>
    <columns>ccrz__TotalUsed__c</columns>
    <columns>ccrz__SourceProduct__c</columns>
    <columns>ccrz__TargetProduct__c</columns>
    <columns>ccrz__DiscountType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>